temp/infrastructure/longhorn-system/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-system
  namespace: longhorn-system
spec:
  routes:
  - kind: Rule
    match: Host(`longhorn.ryanschnabel.com`)
    services:
    - kind: Service
      name: longhorn-frontend
      port: 8000
    #middlewares:
    #  - name: traefik-forward-auth
